[project]
name = "fixcloudutils"
version = "1.6.0"
authors = [{ name = "Some Engineering Inc." }]
description = "Utilities for fixcloud."
license = { file = "LICENSE" }
urls = { "Homepage" = "https://fix.tt" }
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
readme = { file = "README.md", content-type = "text/markdown" }

dependencies = ["attrs", "cattrs"]

[project.optional-dependencies]
redis = ["redis"]
arango = ["python-arango"]
prometheus = ["prometheus-client"]

test = [
    "black",
    "coverage",
    "flake8",
    "hypothesis",
    "mypy",
    "pep8-naming",
    "pip-tools",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "tox",
]

[tool.setuptools.package-data]
fixcloudutils = ["py.typed"]

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

